ch3/kic.yml
# chrono @ 2022-05

# https://docs.nginx.com/nginx-ingress-controller/

# metadata: name
# matchLabels -> app
# - -ingress-class=ngx-ink

# kubectl port-forward -n nginx-ingress ngx-kic-dep-5956f8f878-89s4z 8080:80 &
# curl 127.1:8080/nginx-health
# kubectl port-forward -n nginx-ingress ngx-kic-dep-5956f8f878-89s4z 8081:8081 &
# curl 127.1:8081/nginx-ready
# kubectl port-forward -n nginx-ingress ngx-kic-dep-5956f8f878-89s4z 8088:8080 &
# curl 127.1:8088/stub_status

# in cluster:
# curl --resolve ngx.test:80:10.10.2.17 ngx.test

# kubectl port-forward -n nginx-ingress ngx-kic-dep-5956f8f878-fk2vw 8080:80 &
# curl --resolve ngx.test:8080:127.0.0.1 ngx.test:8080

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngx-kic-dep
  namespace: nginx-ingress

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngx-kic-dep

  template:
    metadata:
      labels:
        app: ngx-kic-dep
     #annotations:
       #prometheus.io/scrape: "true"
       #prometheus.io/port: "9113"
       #prometheus.io/scheme: http
    spec:
      serviceAccountName: nginx-ingress
      containers:
      #- image: nginx/nginx-ingress:2.2.0
      - image: nginx/nginx-ingress:2.2-alpine
        imagePullPolicy: IfNotPresent
        name: nginx-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: readiness-port
          containerPort: 8081
        - name: prometheus
          containerPort: 9113
        readinessProbe:
          httpGet:
            path: /nginx-ready
            port: readiness-port
          periodSeconds: 1
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #nginx
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
          - -ingress-class=ngx-ink
          - -health-status
          - -ready-status
          - -nginx-status

          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
         #- -v=3 # Enables extensive logging. Useful for troubleshooting.
         #- -report-ingress-status
         #- -external-service=nginx-ingress
         #- -enable-prometheus-metrics
         #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
