ch3/wp-maria.yml
# chrono @ 2022-05

# kubectl expose deploy maria-dep --port=3306 $out

# kubectl apply  -f wp-maria.yml
# kubectl delete -f wp-maria.yml

# kubectl exec -it maria-dep-767bbdccb5-bh9vl -- mysql -u wp -p

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: maria-dep
  name: maria-dep

spec:
  replicas: 1
  selector:
    matchLabels:
      app: maria-dep

  template:
    metadata:
      labels:
        app: maria-dep
    spec:
      containers:
      - image: mariadb:10
        name: mariadb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: maria-dep
  name: maria-svc

spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: maria-dep

---
